fix(Modal): if noUnmount is true use visibility instead of display none

--- a/src/components/Modal/_Modal.scss
+++ b/src/components/Modal/_Modal.scss
@@ -43,7 +43,8 @@
   width: 100%;
 
   &--hidden {
-    display: none;
+    pointer-events: none;
+    visibility: hidden;
   }
 
   &__top {
